Scroll feature fix

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,11 +1,10 @@
-<app-product-list appScrollAnchor title="Products"></app-product-list>
-<app-sale-banner appScrollAnchor title="Sales"></app-sale-banner>
+<app-product-list appScrollAnchor="Products"></app-product-list>
+<app-sale-banner appScrollAnchor="Sales"></app-sale-banner>
 <app-recently-viewed></app-recently-viewed>
-<app-parallax appScrollAnchor title="Model"></app-parallax>
-<app-join-us appScrollAnchor title="Join Us"></app-join-us>
-<app-popular-list appScrollAnchor title="Popular"></app-popular-list>
-<app-product-carousel appScrollAnchor
-  title="Gallery"
+<app-parallax appScrollAnchor="Model"></app-parallax>
+<app-join-us appScrollAnchor="Join Us"></app-join-us>
+<app-popular-list appScrollAnchor="Popular"></app-popular-list>
+<app-product-carousel appScrollAnchor="Gallery"
   [productData]="productList">
 </app-product-carousel>
-<app-story appScrollAnchor title="Story"></app-story>
+<app-story appScrollAnchor="Story"></app-story>
