--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,9 @@
-<app-header>
+<app-header appScrollAnchor="Header">
   <app-promo *ngIf="isHomePage"></app-promo>
 </app-header>
 <app-loader></app-loader>
 <router-outlet></router-outlet>
 <app-notification></app-notification>
-<app-footer></app-footer>
+<app-footer appScrollAnchor="Footer"></app-footer>
 <app-scroll></app-scroll>
 
