--- a/src/app/components/scroll/scroll.html
+++ b/src/app/components/scroll/scroll.html
@@ -4,16 +4,16 @@
       *ngFor="let component of pageComponents; let i = index"
       class="menu"
       (click)="onItemSelect(component)"
-      [ngSwitch]="component.selector"
+      [ngSwitch]="component.title"
     >
       <fa-icon
-        *ngSwitchCase="'app-header'"
+        *ngSwitchCase="'Header'"
         [icon]="toHeaderIcon"
         class="icon"
         [class.disabled]="i === activeElement"
       ></fa-icon>
       <fa-icon
-        *ngSwitchCase="'app-footer'"
+        *ngSwitchCase="'Footer'"
         [icon]="toFooterIcon"
         class="icon"
         [class.disabled]="i === activeElement"
